# tilediiif

./: .editorconfig  .flake8  .gitattributes  .gitignore  .prettierrc.json  .projenrc.js  Dockerfile  LICENSE.md  Makefile  README.md  bitbucket-pipelines.yml  docker-compose.yml  mypy.ini  package-lock.json  package.json  poetry.toml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-tilediiif.core.yml  build-tilediiif.server.yml  build-tilediiif.tools.yml  general.yml  release-docker-image-tilediiif-dev.yml  release-docker-image-tilediiif.awslambda.yml  release-docker-image-tilediiif.tools-parallel.yml  release-docker-image-tilediiif.tools-slim.yml
.projen/: deps.json  tasks.json
docker/: Dockerfile  Makefile  config.conf
docker/fragments/: base.Dockerfile  build-mozjpeg.Dockerfile  build-tilediiif-wheel-base.Dockerfile  build-tilediiif.awslambda-wheel.Dockerfile  build-tilediiif.core-wheel.Dockerfile  build-tilediiif.tools-wheel.Dockerfile  build-vips.Dockerfile  dev.Dockerfile  python-base.Dockerfile  tilediiif.awslambda.Dockerfile  tilediiif.tools-parallel.Dockerfile  tilediiif.tools.Dockerfile
docker/images/dev/: CHANGELOG.md  Dockerfile  package.json
docker/images/tilediiif.awslambda/: Dockerfile  package.json
docker/images/tilediiif.tools/: Dockerfile  package.json
docker/images/tilediiif.tools-parallel/: CHANGELOG.md  Dockerfile  package.json
docker/images/tilediiif.tools-slim/: CHANGELOG.md  Dockerfile
integration_test/: data.py  test_infojson.py
integration_test/dzi_tiles/: conftest.py  test_dzi_generation.py  test_generated_tile_contents.py  test_icc_profile_behaviour.py  test_mozjpeg.py  test_pyvips_behaviour_assumptions.py
test_tilediiif/: test_config.py  test_config_cli.py  test_config_parsing.py  test_config_properties.py  test_config_validation.py  test_dzi.py  test_dzi_generation.py  test_filesystem.py  test_infojson.py  test_templates.py  test_tilelayout.py  test_version.py
test_tilediiif/data/: MS-ADD-00269-000-01075.info.json  dzi-tiles-example-config.toml  jpeg-format.dzi
test_tilediiif/server/: conftest.py  test_api.py  test_config.py  test_image_metadata_resource.py  test_image_resource.py  test_logic.py  test_logic_iiif_request.py  test_wsgi.py
test_tilediiif/server/data/: invalid_toml.toml
tilediiif/: dzi.py  dzi_generation.py  dzi_generation_faulthandler.py  filesystem.py  infojson.py  templates.py  tilelayout.py  validation.py
tilediiif.awslambda/: .flake8  Dockerfile  package.json  pyproject.toml
tilediiif.awslambda/.projen/: deps.json
tilediiif.awslambda/tests/: test_capacitylock.py  test_example.py  test_tilegenerator_lambda.py
tilediiif.awslambda/tests/__snapshots__/: test_tilegenerator_lambda.ambr
tilediiif.awslambda/tilediiif/awslambda/: capacitylock.py  handlers.py  tilegenerator_lambda.py
tilediiif.cloudfront/: README.md  babel.config.js  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig-test.json  tsconfig.json
tilediiif.cloudfront/src/: foo.ts  iiif-image-2.1.ts  index.ts  tsconfig.json
tilediiif.cloudfront/tests/: iiif-image-2.1.ts  tsconfig.json
tilediiif.core/: .gitignore  mypy.ini  package.json  pyproject.toml
tilediiif.core/.projen/: deps.json  tasks.json
tilediiif.core/tests/: test_config.py  test_config_cli.py  test_config_parsing.py  test_config_properties.py  test_config_validation.py  test_filesystem.py  test_templates.py
tilediiif.core/tilediiif/core/: filesystem.py  templates.py
tilediiif.server/: .flake8  .gitignore  package.json  pyproject.toml
tilediiif.server/.projen/: deps.json  tasks.json
tilediiif.server/tests/: conftest.py  test_api.py  test_config.py  test_image_metadata_resource.py  test_image_resource.py  test_logic_iiif_request.py  test_wsgi.py
tilediiif.server/tests/data/: config.toml  generate-pears_small.sh  pears_small_size512.dzi
tilediiif.server/tilediiif/server/: api.py  config.py  logic.py  resources.py  uris.py  wsgi.py  wsgi_gunicorn_meinheld.py
tilediiif.tools/: .gitignore  CHANGELOG.md  package.json  pyproject.toml
tilediiif.tools/.projen/: deps.json  tasks.json
tilediiif.tools/integration_tests/: data.py  test_infojson.py
tilediiif.tools/integration_tests/dzi_tiles/: conftest.py  test_dzi_generation.py  test_generated_tile_contents.py  test_icc_profile_behaviour.py  test_mozjpeg.py  test_pyvips_behaviour_assumptions.py
tilediiif.tools/tests/: conftest.py  test_dzi.py  test_dzi_generation.py  test_infojson.py  test_tilelayout.py  test_version.py
tilediiif.tools/tests/data/: MS-ADD-00269-000-01075.dzi  (+3 more)
tilediiif/config/: __init__.py  core.py  exceptions.py  parsing.py  properties.py  validation.py
tilediiif/server/: api.py  config-schema.json  config.py  logic.py  resources.py  uris.py  wsgi.py  wsgi_gunicorn_meinheld.py
(+20 files in other folders)
