[tool.poetry]
name = "tilediiif"
version = "0.1.0"
description = "Command line tools to create/manage tile-backed IIIF Image API servers"
authors = ["Hal Blackburn <hwtb2@cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
falcon = {version = "^2.0", optional = true}
gunicorn = {version = "^19.9", optional = true}
jsonschema = {version = "^3.0", optional = true}
toml = {version = "^0.10.0", optional = true}
rfc3986 = "^1.3"
uwsgi = {version = "^2.0", optional = true}
meinheld = {version = "^1.0", optional = true}
jsonpath-rw = {version = "^1.4", optional = true}
pyvips = {version = "^2.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.1"
hypothesis = "^4.36"
toml = "^0.10.0"
tox = "^3.14"
flake8 = "^3.7"
yappi = "^1.0"
pytest-subtesthack = "^0.1.1"
ipython = "^7.8"
httpie = "^1.0"
black = {version = "^19.3b0", allows-prereleases = true}
flake8-bugbear = "^19.8"
isort = "^4.3"
pytest-lazy-fixture = "^0.6.1"
numpy = "^1.17"

[tool.poetry.scripts]
infojson = 'tilediiif.infojson:main'
iiif-tiles = 'tilediiif.tilelayout:main'
dzi-tiles = 'tilediiif.dzi_generation_faulthandler:run_dzi_generation_with_faulthandler_enabled'

[tool.poetry.extras]
dzigeneration = ["pyvips", "jsonschema", "jsonpath-rw", "toml"]
server = ["falcon", "jsonschema", "jsonpath-rw", "toml"]
"server.gunicorn" = ["gunicorn"]
"server.gunicorn-meinheld" = ["gunicorn", "meinheld"]
"server.uwsgi" = ["uwsgi"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37-{testrunner,target}
skipsdist = true

[testenv]
whitelist_externals =
    env
deps =
    testrunner: poetry
commands_pre =
    target: pip install dist/tilediiif-0.1.0-py3-none-any.whl[dzigeneration]
    testrunner: poetry install -E dzigeneration

commands =
    testrunner: env PATH={toxworkdir}/py37-target/bin {envbindir}/pytest --junitxml=test-results/integration-test-results.xml integration_test
"""

[tool.black]
target-version = ['py36', 'py37', 'py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

